# Kyro_IDE

./: .gitignore  AGENTS.md  CHANGELOG.md  COMPETITOR_ANALYSIS_2026.md  FULL_AUDIT_REPORT.md  LIMITATIONS_ANALYSIS.md  MASTER_PLAN.md  OPENCODE_SESSIONS.md  PHASE_0_COMPLETION_REPORT.md  README.md  UPDATED_IMPLEMENTATION_PLAN.md  codecov.yml  eslint.config.mjs  flake.nix  kyro-product.json  next.config.ts  opencode-cheatsheet.sh  opencode.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.cargo/: audit.toml
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.opencode/: code-reviewer.md  security-auditor.md  (+2 more)
src-tauri/: Cargo.toml  check_output.txt  tarpaulin-output.txt  tauri.conf.json
src-tauri/benches/: performance.rs
src-tauri/crates/kyro-ai/: Cargo.toml
src-tauri/crates/kyro-ai/src/: agent.rs  lib.rs  orchestrator.rs
src-tauri/crates/kyro-collab/: Cargo.toml
src-tauri/crates/kyro-collab/src/: lib.rs  manager.rs  room.rs
src-tauri/crates/kyro-core/: Cargo.toml
src-tauri/crates/kyro-core/src/: error.rs  lib.rs  registry.rs  runtime.rs  types.rs
src-tauri/crates/kyro-git/: Cargo.toml
src-tauri/crates/kyro-git/src/: lib.rs  manager.rs  repository.rs
src-tauri/crates/kyro-lsp/: Cargo.toml
src-tauri/crates/kyro-lsp/src/: lib.rs  manager.rs  server.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/accessibility/: mod.rs
src-tauri/src/agent_editor/: agent.rs  approval.rs  executor.rs  mod.rs  planner.rs  tools.rs
src-tauri/src/agent_editor/prompts/: agent_planner.txt
src-tauri/src/agent_store/: mod.rs
src-tauri/src/agents/: agent_lock.rs  branch_manager.rs  file_guard.rs  guardrails.rs  memory.rs  mod.rs  parallel_agents.rs  scheduler.rs  sync_enforcer.rs
src-tauri/src/ai/: mod.rs  quality_gate.rs  real_ai_service.rs
src-tauri/src/airllm/: mod.rs
src-tauri/src/aot/: mod.rs  prompts.rs
src-tauri/src/auth/: audit.rs  jwt_handler.rs  mod.rs  oauth.rs  rate_limiter.rs  rbac.rs  session.rs
src-tauri/src/autonomous/: executor.rs  external.rs  mod.rs  planner.rs  verifier.rs
src-tauri/src/benchmark/: ai_latency.rs  file_ops.rs  lsp_perf.rs  memory.rs  mod.rs  startup.rs
src-tauri/src/buffer/: edit.rs  gap_buffer.rs  mod.rs  piece_table.rs  rope_buffer.rs
src-tauri/src/business/: mod.rs
src-tauri/src/chat_sidebar/: code_aware.rs  context_builder.rs  mod.rs  rag_chat.rs  streaming.rs
src-tauri/src/chat_sidebar/prompts/: code_assistant.txt  javascript_hints.txt  python_hints.txt  rust_hints.txt  typescript_hints.txt
src-tauri/src/collab/: awareness.rs  document.rs  mod.rs  sync.rs
src-tauri/src/collaboration/: actor.rs  auth.rs  mod.rs  presence.rs  room.rs  scalable_collab.rs  sync.rs
src-tauri/src/commands/: agent_store.rs  ai.rs  airllm.rs  aot.rs  auth.rs  autonomous.rs  chat_agent.rs  collaboration.rs  debug.rs  e2ee.rs  embedded_llm.rs  extensions.rs  feedback.rs  fs.rs  git.rs  gitcrdt.rs  lsp.rs  lsp_real.rs  marketplace.rs  mcp.rs  mod.rs  model_download.rs  orchestrator.rs  picoclaw.rs  plugin.rs  project_config.rs  rag.rs  remote.rs  repowiki.rs  review.rs  search.rs  settings.rs  swarm.rs  terminal.rs  testing.rs  update.rs  vscode_compat.rs  websocket.rs
src-tauri/src/debug/: breakpoints.rs  client.rs  debug_adapter.rs  mod.rs  server.rs  session.rs  types.rs  variables.rs
src-tauri/src/e2ee/: double_ratchet.rs  encrypted_channel.rs  key_exchange.rs  mod.rs
src-tauri/src/embedded_llm/: backends.rs  context_cache.rs  engine.rs  memory_tiers.rs  mod.rs  model_manager.rs  real_inference.rs  zero_dependency.rs
src-tauri/src/extensions/: api.rs  github_marketplace.rs  mod.rs  registry.rs  runtime.rs  sandbox.rs
src-tauri/src/feedback/: mod.rs
src-tauri/src/files/: local_history.rs  mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/git_crdt/: ai_merge.rs  awareness.rs  git_persistence.rs  mod.rs  websocket_sync.rs  yjs_adapter.rs
src-tauri/src/inference/: mod.rs  model.rs  sampler.rs  tokenizer.rs
src-tauri/src/lsp/: completion_engine.rs  lsp_manager.rs  mod.rs  postfix_completion.rs  smart_selection.rs  wasm_loader.rs
src-tauri/src/lsp_tower/: backend.rs  mod.rs
src-tauri/src/lsp_transport/: client.rs  code_lens.rs  dispatcher.rs  inlay_hints.rs  mod.rs  semantic_tokens.rs  transport.rs
src-tauri/src/mcp/: client.rs  mod.rs  prompts.rs  resources.rs  server.rs  tools.rs  transport.rs
src-tauri/src/memory/: compression.rs  hierarchy.rs  mod.rs  symbol_graph.rs
src-tauri/src/orchestrator/: missions.rs  mod.rs
src-tauri/src/p2p/: discovery.rs  mod.rs  sync.rs  webrtc.rs
src-tauri/src/picoclaw/: mod.rs
src-tauri/src/plugin_sandbox/: api.rs  capabilities.rs  mod.rs  runtime.rs
src-tauri/src/quality/: mod.rs  validator.rs
src-tauri/src/rag/: embedder.rs  embeddings.rs  file_watcher.rs  graph_rag.rs  indexer.rs  mod.rs  retriever.rs  vector_store.rs
src-tauri/src/repowiki/: generator.rs  graph.rs  mod.rs  scanner.rs  sync.rs  writer.rs
src-tauri/src/swarm_ai/: agents.rs  kv_cache.rs  local_inference.rs  mod.rs  model_registry.rs  p2p_swarm.rs  router.rs  speculative_decoder.rs
src-tauri/src/swarm_ai/prompts/: browser.txt  codegen.txt  debug.txt  deploy.txt  docs.txt  review.txt  test.txt  verify.txt
src-tauri/src/telegram/: bot.rs  commands.rs  mod.rs  notifications.rs
src-tauri/src/telemetry/: mod.rs
src-tauri/src/terminal/: mod.rs
src-tauri/src/trust/: audit.rs  mod.rs  permissions.rs  requests.rs  sandbox.rs
src-tauri/src/update/: channels.rs  delta.rs  mod.rs  models.rs  rollback.rs
src-tauri/src/vscode_compat/: api.rs  commands.rs  extension_host.rs  extension_runtime.rs  manifest.rs  marketplace.rs  mod.rs  openvsx.rs  protocol.rs
src-tauri/src/vscode_compat/api/: commands.rs  debug.rs  languages.rs  window.rs  workspace.rs
src-tauri/tests/: auth_test.rs  collaboration_integration.rs  collaboration_test.rs  e2ee_test.rs  integration_tests.rs  lsp_test.rs  mod.rs  performance_test.rs  security_test.rs  vscode_compat_test.rs
src-tauri/windows/: installer-hooks.nsh
(+158 files in other folders)
