[package]
name = "kyro-ide"
version = "0.2.0"
description = "KRO_IDE - AI-Powered Code Editor with Embedded LLM, MCP Agents, and Zero-Dependency Distribution"
authors = ["KRO_IDE Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/nkpendyam/Kyro_IDE"

[lib]
name = "kyro_ide"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ============ Kyro Crates (Modular Architecture) ============
kyro-core = { path = "crates/kyro-core" }
kyro-lsp = { path = "crates/kyro-lsp" }
kyro-ai = { path = "crates/kyro-ai" }
kyro-collab = { path = "crates/kyro-collab" }
kyro-git = { path = "crates/kyro-git" }

# ============ Tauri (Desktop Shell) ============
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"  # For auto-updates

# ============ Serialization ============
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ============ Async Runtime ============
tokio = { version = "1", features = ["full", "test-util"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# ============ HTTP Client ============
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# ============ Terminal ============
portable-pty = "0.8"

# ============ File Watching ============
notify = "6.1"

# ============ Git ============
git2 = "0.20"

# ============ Tree-sitter (Language Parsing) ============
tree-sitter = "0.24"

# Tree-sitter grammars (10 core languages - latest crates.io versions)
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-md = "0.5"

# ============ Concurrency ============
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
async-trait = "0.1"

# ============ Utilities ============
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
which = "5.0"
tempfile = "3.10"
shellexpand = "3.1"
num_cpus = "1.16"
walkdir = "2.4"
lazy_static = "1.4"
rand_pcg = "0.3"

# ============ QR Code Generation (from EntityFX/qrcode-rs) ============
qrcode = "0.14"  # QR code generation (https://github.com/EntityFX/qrcode-rs)
image = { version = "0.25", default-features = false, features = ["png"] }  # Image processing for QR codes

# ============ LSP Support ============
lsp-types = "0.95"
tower-lsp = "0.20"  # LSP implementation framework (from ebkalderon/tower-lsp)

# ============ Database (Agent Memory) ============
rusqlite = { version = "0.31", features = ["bundled"] }

# ============ Vector Database (RAG) ============
rand_distr = "0.4"
# For embeddings - use local model or simple hashing
ndarray = "0.15"
# Quantization for vector storage
bincode = "1.3"

# ============ Text Processing ============
regex = "1.10"
# Text chunking for RAG
# text-splitter = "0.6"  # FIXME: verify crate exists
# TF-IDF for fallback search
rust-stemmers = "1.2"

# ============ System Info ============
sysinfo = "0.30"

# ============ Archive Handling (for updates/plugins) ============
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1.0"

# ============ WASM Runtime (Plugin System) ============
wasmtime = { version = "20", optional = true, default-features = false, features = ["cranelift", "pooling-allocator"] }

# ============ Embedded LLM (llama.cpp) ============
# Real GGUF model inference using candle (HuggingFace)
candle-core = { version = "0.4", optional = true }
candle-nn = { version = "0.4", optional = true }
candle-transformers = { version = "0.4", optional = true }
tokenizers = { version = "0.15", optional = true }

# Alternative: llama-cpp bindings
llama_cpp = { version = "0.3", optional = true }

# ============ DAP (Debug Adapter Protocol) ============
dap = "0.4.1-alpha1"  # Debug Adapter Protocol types and client

# ============ Vector Database (RAG) - Commented out to fix build
# qdrant-client = { version = "1.7", optional = true }

# ============ CRDT (Collaboration) ============
yrs = "0.18"  # Yjs Rust port (from y-crdt/y-crdt)
automerge = { version = "0.5", optional = true }  # Alternative CRDT (optional)
loro = "1.3"  # Loro CRDT (from loro-dev/loro) - rich text collaboration

# ============ Text Buffer ============
ropey = "1.6"  # UTF-8 text rope (from cessen/ropey)

# ============ Additional Crypto ============
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# ============ JWT Authentication ============
# Using jsonwebtoken (from Keats/jsonwebtoken) - pure Rust, no BoringSSL/cmake needed
jsonwebtoken = "9.3"

# ============ Password Hashing ============
argon2 = "0.5"  # Argon2 password hashing (recommended)
bcrypt = "0.15"  # Bcrypt fallback password hashing
password-hash = "0.5"  # Password hashing traits

# ============ End-to-End Encryption (Signal Protocol) ============
# Based on: https://github.com/signalapp/libsignal
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"  # AEAD encryption
hkdf = "0.12"  # Key derivation
hmac = "0.12"  # HMAC for message authentication
hnsw = "0.11.0"
hex = "0.4.3"
glob-match = "0.2.1"
urlencoding = "2.1.3"
futures = "0.3.32"
url = "2"
petgraph = "0.6"
streaming-iterator = "0.1"

# ============ Platform-Specific ============

# Unix-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "fileapi", "psapi", "sysinfoapi", "processthreadsapi"] }

# macOS-specific
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"

# ============ Build Profile Optimizations ============

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# ============ Platform-Specific Static Linking (via .cargo/config.toml) ============
# Note: Linker configuration should be in .cargo/config.toml, not Cargo.toml

# ============ Lint Configuration ============
# Early-stage project: suppress warnings from stubs and scaffolding.
# These will be progressively tightened as modules mature.

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(fixme_tests)'] }
non_snake_case = "allow"
non_camel_case_types = "allow"
deprecated = "allow"
unreachable_code = "allow"
unreachable_patterns = "allow"
unused_assignments = "allow"
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_mut = "allow"
unused_results = "allow"
unused_macros = "allow"

[lints.clippy]
# Style lints
too_many_arguments = "allow"
field_reassign_with_default = "allow"
new_without_default = "allow"
should_implement_trait = "allow"
upper_case_acronyms = "allow"
enum_variant_names = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
wildcard_imports = "allow"
redundant_else = "allow"
# Complexity lints
type_complexity = "allow"
cognitive_complexity = "allow"
too_many_lines = "allow"
# Correctness/safety
mutex_atomic = "allow"
await_holding_lock = "allow"
let_underscore_future = "allow"
# Cast lints (common in cross-platform code)
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
# Documentation
doc_lazy_continuation = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
# Code patterns
ptr_arg = "allow"
manual_strip = "allow"
manual_clamp = "allow"
manual_while_let_some = "allow"
large_enum_variant = "allow"
if_same_then_else = "allow"
no_effect = "allow"
len_without_is_empty = "allow"
redundant_pattern_matching = "allow"
iter_filter_is_ok = "allow"
manual_find_map = "allow"
explicit_counter_loop = "allow"
needless_range_loop = "allow"
unnecessary_unwrap = "allow"
result_filter_map = "allow"
lines_filter_map_ok = "allow"
map_unwrap_or = "allow"
match_wildcard_for_single_variants = "allow"
match_bool = "allow"
single_match_else = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
return_self_not_must_use = "allow"
must_use_candidate = "allow"
implicit_clone = "allow"
cloned_instead_of_copied = "allow"
uninlined_format_args = "allow"
inconsistent_struct_constructor = "allow"
items_after_statements = "allow"
default_trait_access = "allow"
semicolon_if_nothing_returned = "allow"
ignored_unit_patterns = "allow"
needless_pass_by_value = "allow"
used_underscore_binding = "allow"
unnested_or_patterns = "allow"
redundant_closure = "allow"
manual_let_else = "allow"
match_same_arms = "allow"

# ============ Workspace Lint Configuration ============

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(fixme_tests)'] }
non_snake_case = "allow"
non_camel_case_types = "allow"
deprecated = "allow"
unreachable_code = "allow"
unreachable_patterns = "allow"
unused_assignments = "allow"
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_mut = "allow"
unused_results = "allow"

[workspace.lints.clippy]
too_many_arguments = "allow"
ptr_arg = "allow"
type_complexity = "allow"
new_without_default = "allow"
field_reassign_with_default = "allow"
should_implement_trait = "allow"
upper_case_acronyms = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
module_name_repetitions = "allow"
unused_self = "allow"
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
redundant_closure_for_method_calls = "allow"
return_self_not_must_use = "allow"
must_use_candidate = "allow"
uninlined_format_args = "allow"
let_underscore_future = "allow"

# ============ Features ============

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Embedded LLM (llama.cpp) - REAL implementation
llama-cpp = ["dep:llama_cpp"]

# Candle ML framework (HuggingFace inference)
candle-inference = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]

# Full local AI support
local-ai = ["llama-cpp", "candle-inference"]

# WASM Plugin System
wasm-plugins = ["wasmtime"]

# CUDA GPU Acceleration
cuda = []

# Metal GPU Acceleration (macOS only)
metal = []

# Vulkan GPU Acceleration
vulkan = []

# RAG System with Vector DB
rag = []

# Alternative CRDT backend
crdt-automerge = ["automerge"]

# Full Enterprise Features
enterprise = ["wasm-plugins", "rag"]

# Development/Debug Features (trace is the most verbose, includes debug)
debug-logging = ["log/max_level_trace"]

# ============ Workspace Members ============
# Workspace configuration for modular Rust backend
[workspace]
members = [
    ".",
    "crates/kyro-core",      # Core types and utilities
    "crates/kyro-lsp",       # LSP manager and language intelligence
    "crates/kyro-ai",        # AI orchestrator and agent system
    "crates/kyro-collab",    # CRDT collaboration engine
    "crates/kyro-git",       # Git integration
]
