[package]
name = "kyro-ai"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AI orchestrator and agent system for Kyro IDE"

[lints]
workspace = true

[dependencies]
# Core
kyro-core = { path = "../kyro-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
async-trait = "0.1"
