[package]
name = "kyro-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "LSP manager and language intelligence for Kyro IDE"

[lints]
workspace = true

[dependencies]
# Core
kyro-core = { path = "../kyro-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# LSP
lsp-types = "0.95"
tower-lsp = "0.20"

# Tree-sitter
tree-sitter = "0.24"

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
log = "0.4"
async-trait = "0.1"
